# CPP-Uamp

./: .gitignore  CMakeLists.txt  README.md  countlines.py  uamp 2
3dparty/BASS/: libbass.dylib
app/: CMakeLists.txt  main.cpp
app/Forms/: mainwindow.ui
app/resources/: qmain.qss  resources.qrc
app/src/: albumcover.cpp  component.cpp  component.h  general.cpp  general.h  libraryManager.cpp  libraryManager.h  listmodel.cpp  listmodel.h  login.cpp  login.h  mainwindow.cpp  mainwindow.h  mediator.cpp  mediator.h  myDb.cpp  myDb.h  myitem.cpp  myitem.h  mylist.cpp  mylist.h  mymodel.cpp  mymodel.h  mytable.cpp  mytable.h  mytreeview.cpp  mytreeview.h  playlist.cpp  playlist.h  qplayer.cpp  qplayer.h  qsidebar.cpp  qsidebar.h  qsuperbutton.cpp  qsuperbutton.h  queue.cpp  queue.h  queuewidget.cpp  queuewidget.h  registration.cpp  (+9 more)
